# PixelDancer-Vulkan

./: .gitignore  CMakeLists.txt  LICENSE  PixelDancer-Vulkan.sln  PixelDancer-Vulkan.vcxproj  PixelDancer-Vulkan.vcxproj.filters  README.md  main.cpp
Include/: Common.hpp  Instance.h  Instance.hpp
Source/: Instance.cpp
shaders/: triangle.frag  triangle.vert  triangle_buffer.frag  triangle_buffer.vert  triangle_buffer_vert.spv  triangle_vert.spv
source/: application.cpp  application.h  buffer.cpp  buffer.h  commandbuffer.cpp  commandbuffer.h  commandpool.cpp  commandpool.h  debug.h  framebuffer.cpp  framebuffer.h  image.cpp  image.h  mesh.cpp  mesh.h  nexus.cpp  nexus.h  pipeline.cpp  pipeline.h  renderpass.cpp  renderpass.h  shader.cpp  shader.h  swapchain.cpp  swapchain.h  synchronize.cpp  synchronize.h
